--- a/src/nba_rank/templates/partials/footer.html
+++ b/src/nba_rank/templates/partials/footer.html
@@ -14,7 +14,7 @@
                 <p class="text-center">
                     {% total_votes as total_votes %}
                     {% blocktrans trimmed %}
-                        Created by <a href="https://pawelad.xyz" target="_blank">pawelad</a>
+                        Made by <a href="https://pawelad.xyz" target="_blank">pawelad</a>
                         &nbsp;&nbsp;|&nbsp;&nbsp;
                         Total number of votes: {{ total_votes }}
                     {% endblocktrans %}
