--- a/src/nba_rank/templates/base.html
+++ b/src/nba_rank/templates/base.html
@@ -8,20 +8,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{% block title %}Crowdsourced NBA players ranking{% endblock title %}</title>
-
     <link rel="icon" type="image/png" href="{% static 'nba_rank/img/favicon-32x32.png' %}" sizes="32x32">
     <link rel="apple-touch-icon-precomposed" href="{% static 'nba_rank/img/favicon-152x152.png' %}" sizes="152x152">
 
-    <!-- Base -->
+    <title>{% block title %}Crowdsourced NBA players ranking{% endblock title %}</title>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+    {# Base #}
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.7/paper/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-    <!-- Plugins -->
+    {# Plugins #}
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/tooltipster/3.3.0/css/tooltipster.min.css">
 
-    <!-- Own -->
+    {# Own #}
     <link rel="stylesheet" href="{% static 'nba_rank/css/style.css' %}">
 
     {% google_analytics %}
@@ -46,10 +52,10 @@
     {% endblock %}
 
     {% block base_js %}
-        <!-- Base -->
+        {# Base #}
         <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <!-- Plugins -->
+        {# Plugins #}
         <script src="//cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/tooltipster/3.3.0/js/jquery.tooltipster.min.js"></script>
 
